# mem0-mcp-custom-deploy

./: .gitignore  README.md  config.py  install-service.sh  mem0-stack.env.example  mem0-stack.service  mem0-stack.sh  pyproject.toml
src/mem0_mcp_server/: __init__.py  auth_server.py  cli.py  client.py  device_tokens.py  http_entry.py  identity.py  local_memory.py  plugin_contract.py  server.py  server_config.py
tests/integration/: test_http_health.py  test_single_user_multi_device_flow.py
tests/unit/: test_cli.py  test_client.py  test_device_tokens.py  test_docs_auth_mode.py  test_identity.py  test_identity_enforcement.py  test_local_memory_adapter.py  test_placeholder.py  test_plugin_contract.py  test_request_identity_resolution.py  test_server_config.py  test_server_identity_scope.py  test_server_tools.py
